# Toolomics

./: .dockerignore  .env.example  .gitignore  ADDING_NEW_MCP_SERVER.md  BROWSER_CONCURRENCY_REDESIGN.md  CONTRIBUTING.md  Dockerfile  FASTMCP_DOC.md  MIGRATION_TO_TOOLHIVE.md  NOTICE.txt  README.md  STREAMABLE_HTTP_MIGRATION.md  build-toolhive.sh  config  config.json  config_86517947.json  config_docker.json  config_host.json  debug_browser.py  deploy.py  detect_adducts.R  discover_mcp.py  ports_config.json  pyproject.toml  registry.json  registry.json.backup  requirements.txt  rscript.Dockerfile  setup_cuda_docker.sh  shared.py  start-toolhive.sh  start.sh  test_all_mcps.sh  test_streamable_http.py  test_url_normalization.py
.github/: pull_request_template.md
CLA/: EMPLOYER_AUTHORIZATION.md  INDIVIDUAL_CLA.md
docs/: CONTRIBUTING.md  cla-process.md  licensing-notes.md
registry/: registry.json  update_registry.py
storage/: QC_0_adducts.csv
test/: R_test.py  shell_test.py
tests/: README_TESTS.md  R_test.py  browser_concurrency_test.py  comprehensive_mcp_test.py  csv_test.py  fetch_server_test.py  filesystem_server_test.py  git_server_test.py  run_all_mcp_tests.py  shell_test.py  simple_mcp_test.py  stress_test.sh  test-network-integration.sh  test_decimer_analyze_document.py  test_decimer_classifier.py  test_decimer_segmentation.py  test_decimer_transformer.py  test_html_parser.py  test_pdf.py  test_recursive_csv.py  test_url_normalization.py  test_utils.py  time_server_test.py  toolomics_browser_test.py  toolomics_csv_test.py  toolomics_pdf_test.py  (+5 more)
(+79 files in other folders)
